rustdocs/errors/rust-bitcoin-benches-bitcoin-witness.rs.txt
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `bitcoin`
 --> ../rust-bitcoin/benches/bitcoin/witness.rs:5:5
  |
5 | use bitcoin::blockdata::witness::Witness;
  |     ^^^^^^^ use of unresolved module or unlinked crate `bitcoin`
  |
help: you might be missing a crate named `bitcoin`, add it to your project and import it in your code
  |
3 + extern crate bitcoin;
  |

error[E0432]: unresolved import `criterion`
 --> ../rust-bitcoin/benches/bitcoin/witness.rs:6:5
  |
6 | use criterion::{criterion_group, criterion_main, BenchmarkId, Criterion};
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `criterion`
  |
help: you might be missing a crate named `criterion`, add it to your project and import it in your code
  |
3 + extern crate criterion;
  |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
